# murdoch

./: .gitignore  CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
bag/: analytics.bag  bag_to_eps.bash  bag_to_eps.m  disp_cycles-inc.eps  disp_skills_processor-inc.eps  disp_skills_strength.tex  disp_skilss_battery-inc.eps  disp_skilss_battery.tex  disp_waypoints-inc.eps  disp_waypoints_x-inc.eps  disp_waypoints_x.tex  hist_cycles-inc.eps  hist_cycles.tex  hist_skills_battery.tex  hist_skills_processor-inc.eps  hist_skills_processor.tex  hist_skills_strength-inc.eps  hist_waypoints-inc.eps  hist_waypoints_x-inc.eps  hist_waypoints_y-inc.eps  skills-battery.csv  skills-camera.csv  skills-level-battery.csv  skills-level-processor.csv  skills-processor.csv  skills-strength-inc.eps  waypoints-inc.eps  waypoints-y-inc.eps  waypoints-y.csv
bag1/: cycles.csv  disp_cycles.tex  disp_skills_processor.tex  disp_skills_strength-inc.eps  disp_waypoints.tex  disp_waypoints_y-inc.eps  disp_waypoints_y.tex  hist_skills_battery-inc.eps  hist_skills_strength.tex  hist_waypoints.tex  hist_waypoints_x.tex  hist_waypoints_y.tex  skills-battery-inc.eps  skills-laserscan.csv  skills-level-strength.csv  skills-processor-inc.eps  skills-strength.csv  waypoints-x-inc.eps  waypoints-x.csv  waypoints.csv
config/: auctioneer1_params.yaml  bidder1_executor_params.yaml  bidder1_params.yaml  bidder2_executor_params.yaml  bidder2_params.yaml  bidder3_executor_params.yaml  bidder3_params.yaml  bidder4_params.yaml  bidder5_executor_params.yaml  bidder5_params.yaml  rosconsole.conf  task_generator_params.yaml
include/murdoch/: agent_node.h  auctioneer_node.h  bidder_node.h  task_executor_node.h  task_generator_node.h
include/utilities/: exception.h  interval.h  noisy.h  noisy_bool.h  noisy_double.h  noisy_duration.h  noisy_long.h  noisy_time.h  probability_density_function.h  random_generator.h  ros_node.h  task_generator.h
launch/: agent.launch  auction1.launch  auctioneer.launch  bidder.launch  task_generator.launch
src/: agent_node.cpp  analytics_node.cpp  auctioneer_node.cpp  bidder_node.cpp  task_executor_node.cpp  task_generator_node.cpp
src/murdoch/: agent_node.cpp  auctioneer_node.cpp  bidder_node.cpp  task_executor_node.cpp  task_generator_node.cpp
src/utilities/: exception.cpp  noisy_duration.cpp  noisy_time.cpp  probability_density_function.cpp  ros_node.cpp  task_generator.cpp
