<?xml version="1.0"?>
<package format="2">
	<name>murdoch</name>
	<version>0.0.8</version>
	<description>The murdoch package</description>
	<maintainer email="adrianohrl@unifei.edu.br">Adriano Henrique Rossette Leite</maintainer>
 <author email="adrianohrl@unifei.edu.br">Adriano Henrique Rossette Leite</author>
	<license>BSD</license>

	<buildtool_depend>catkin</buildtool_depend>
	<build_depend>roscpp</build_depend>
	<build_depend>talmech</build_depend>
	<build_export_depend>roscpp</build_export_depend>
	<build_export_depend>talmech</build_export_depend>
	<exec_depend>roscpp</exec_depend>
	<exec_depend>talmech</exec_depend>

	<export>
	</export>
</package>
